# matrix-cdl

./: matrix-cdl.cabal  repa-cdl.cabal
Data/Algebra/: Boolean.hs
Data/Array/: Boolean.hs
Data/Array/Repa/Algorithms/Matrix/: Boolean.hs
Data/Array/Repa/Operators/Reduction/: Boolean.hs
examples/: divisible.hs  multiplication.hs
