Name:                   repa-cdl
Version:                0.0.1
Category:               Data Structures
Synopsis:               repa extension for CDL (Complement Distributive Lattices)
Description:
  \"CDL\" is a shorthand for boolean algebra.
  .
  In mathematics, boolean algebra data structure is a is a six-tuple consisting of:
  .
  * set A
  .
  * binary operation ∧ (called \"meet\")
  .
  * binary operation ∨ (called \"join\")
  .
  * unary operation &#xAC; (called \"complement\")
  .
  * 0 element (sometimes denoted by &#x27D8;)
  .
  * 1 element (sometimes denoted by &#x27D9;)
  .
  / Axioms /
  .
  - associativity:
  .
  a ∨ (b ∨ c) = (a ∨ b) ∨ c
  .
  a ∧ (b ∧ c) = (a ∧ b) ∧ c
  .
  - commutativity:
  .
  a ∨ b = b ∨ a
  .
  a ∧ b = b ∧ a
  .
  - identity:
  .
  a ∨ 0 = a
  .
  a ∧ 1 = aA
  .
  - distributivity:
  .
  a ∨ (b ∧ c) = (a ∨ b) ∧ (a ∨ c)
  .
  a ∧ (b ∨ c) = (a ∧ b) ∨ (a ∧ c)
  .
  - complements:
  .
  a ∨ &#xAC;a = 1
  .
  a ∧ &#xAC;a = 0
  .

License:                MIT
License-file:           LICENSE

Author:                 Dmitry Malikov
Maintainer:             Dmitry Malikov <malikov.d.y@gmail.com>

Build-type:             Simple
Cabal-version:          >= 1.6
Homepage:               _

Library
  Build-Depends:        base >= 3 && < 5,
                        repa >= 3.2.2.2,
                        repa-algorithms >= 3.2.2.1,
                        vector >= 0.9.1

  HS-Source-Dirs:       ./

  Exposed-Modules:      Data.Array.Repa.Operators.Reduction.Boolean,
                        Data.Array.Repa.Algorithms.Matrix.Boolean,
                        Data.Algebra.Boolean

  GHC-Options:          -Wall


Source-repository head
  type:                 git
  location:             _

